--- a/css/style.css
+++ b/css/style.css
@@ -19,89 +19,11 @@ header {
     margin-bottom: 24px;
 }
 
-/* Dark Theme */
-body.dark {
-    background: linear-gradient(to right, #141e30, #243b55);
-    color: wheat
-}
-
-body.dark main {
-    background-color: #1e2a38;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
-}
-
-body.dark input,
-body.dark textarea {
-    background-color: #2a3b4c;
-    color: white;
-    border-color: #444;
-}
-
-body.dark input:focus,
-body.dark textarea:focus {
-    border-color: #00bcd4;
-    box-shadow: 0 0 8px rgba(0, 188, 212, 0.3);
-}
-
-body.dark footer {
-    color: #ccc;
-}
-
-body.dark .bg-lightseagreen {
-    background-color: #007f5f;
-}
-
-body.dark .bg-lightseagreen:hover {
-    background-color: #006c4f;
-}
-
-body.dark .bg-lightcoral {
-    background-color: #b02a37;
-}
-
-body.dark .bg-lightcoral:hover {
-    background-color: #a02030;
-}
-
-body.dark .bg-lightblue {
-    background-color: #0056b3;
-}
-
-body.dark .bg-lightblue:hover {
-    background-color: #00408a;
-}
-
-/* Animasi dan efek */
-main {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: all 0.6s ease;
-}
-
-main.slide-in {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-button {
-    background-color: black;
-}
-
-button:hover {
-    transform: scale(1.05);
-    transition: all 0.3s ease;
-}
-
-input,
-textarea {
-    transition: all 0.3s ease;
-}
-
 /* content */
 main {
     max-width: 600px;
     margin: 0 auto;
-    background-color: beige;
+    background-color: #999;
     padding: 24px;
     border-radius: 12px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
